log.txt
(venv) Narongwits-MacBook-Pro:liap-tui nrw$ ./start.sh
▶️ Starting backend on http://0.0.0.0:5050 ...
INFO:     Will watch for changes in these directories: ['/Users/nrw/python/tui-project/liap-tui']
INFO:     Uvicorn running on http://0.0.0.0:5050 (Press CTRL+C to quit)
INFO:     Started reloader process [84067] using WatchFiles
🌐 Starting esbuild in watch mode...
🔄 RELIABLE_MSG: Message retry worker started
Process SpawnProcess-1:
Traceback (most recent call last):
  File "/Users/nrw/.pyenv/versions/3.11.8/lib/python3.11/multiprocessing/process.py", line 314, in _bootstrap
    self.run()
  File "/Users/nrw/.pyenv/versions/3.11.8/lib/python3.11/multiprocessing/process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "/Users/nrw/python/tui-project/liap-tui/venv/lib/python3.11/site-packages/uvicorn/_subprocess.py", line 80, in subprocess_started
    target(sockets=sockets)
  File "/Users/nrw/python/tui-project/liap-tui/venv/lib/python3.11/site-packages/uvicorn/server.py", line 66, in run
    return asyncio.run(self.serve(sockets=sockets))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nrw/.pyenv/versions/3.11.8/lib/python3.11/asyncio/runners.py", line 190, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "/Users/nrw/.pyenv/versions/3.11.8/lib/python3.11/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "uvloop/loop.pyx", line 1518, in uvloop.loop.Loop.run_until_complete
  File "/Users/nrw/python/tui-project/liap-tui/venv/lib/python3.11/site-packages/uvicorn/server.py", line 70, in serve
    await self._serve(sockets)
  File "/Users/nrw/python/tui-project/liap-tui/venv/lib/python3.11/site-packages/uvicorn/server.py", line 77, in _serve
    config.load()
  File "/Users/nrw/python/tui-project/liap-tui/venv/lib/python3.11/site-packages/uvicorn/config.py", line 435, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nrw/python/tui-project/liap-tui/venv/lib/python3.11/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nrw/.pyenv/versions/3.11.8/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/Users/nrw/python/tui-project/liap-tui/backend/api/main.py", line 7, in <module>
    from backend.api.routes.routes import router as api_router # Import the API router for REST endpoints.
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nrw/python/tui-project/liap-tui/backend/api/routes/__init__.py", line 5, in <module>
    from .routes import router as api_router # Imports the router for RESTful API endpoints.
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nrw/python/tui-project/liap-tui/backend/api/routes/routes.py", line 10, in <module>
    from backend.shared_instances import shared_room_manager, shared_bot_manager
  File "/Users/nrw/python/tui-project/liap-tui/backend/shared_instances.py", line 4, in <module>
    from engine.bot_manager import BotManager
  File "/Users/nrw/python/tui-project/liap-tui/backend/engine/bot_manager.py", line 206
    async def _handle_enterprise_phase_change(self, data: dict):
IndentationError: expected an indented block after 'else' statement on line 204

> frontend@1.0.0 dev
> node esbuild.config.cjs

👀 Watching for changes to ./main.js, output to ../backend/static/

[111.61ms] [@tailwindcss/postcss] src/styles/globals.css
[  0.08ms]   ↳ Quick bail check
[ 26.90ms]   ↳ Setup compiler
[  0.46ms]     ↳ PostCSS AST -> Tailwind CSS AST
[ 26.42ms]     ↳ Create compiler
[  0.12ms]   ↳ Register full rebuild paths
[  1.68ms]   ↳ Setup scanner
[ 15.89ms]   ↳ Scan for candidates
[  7.28ms]   ↳ Register dependency messages
[ 52.01ms]   ↳ Build utilities
[  5.00ms]   ↳ Transform Tailwind CSS AST into PostCSS AST
[  2.14ms]   ↳ Update PostCSS AST
